Fix text positioning on overlay
  * Fill vertical space
  * Avoid overflowing right side of player

--- a/src/app/embed/embed.component.css
+++ b/src/app/embed/embed.component.css
@@ -42,7 +42,9 @@ p.aside {
   text-align: center;
   display: flex;
   flex-flow: column nowrap;
-  align-content: space-between;
+  height: 100%;
+  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 
