--- a/src/app/shared/player/player.component.css
+++ b/src/app/shared/player/player.component.css
@@ -24,10 +24,11 @@
   margin: 5px 14px;
   top: 125px;
   bottom: 0;
+  left: 0; right: 0;
+  width: auto;
   height: auto;
   opacity: 0;
   transform: scale(2.0);
-  width: 100%;
   pointer-events: none;
   transition: top 0.2s, opacity 0.2s, transform 0.2s;
 }
